crates/kapsel-testing/src/snapshots/kapsel_testing__after_ingestion.snap
---
source: crates/kapsel-testing/src/lib.rs
assertion_line: 1525
expression: snapshot
---
Events Table Snapshot
====================

Event 1:
  source_event_id: scenario-snap-001
  status: pending
  failure_count: 0
  attempt_count: 1
  payload_size: 17
  content_type: application/json
  id: [UUID]
  tenant_id: [UUID]
  endpoint_id: [UUID]
  received_at: [TIMESTAMP]
