crates/kapsel-testing/src/snapshots/kapsel_testing__delivery_attempts.snap
---
source: crates/kapsel-testing/src/lib.rs
expression: snapshot
---
Delivery Attempts Snapshot
=========================

Attempt 1:
  attempt_number: 1
  response_status: Some(200)
  duration_ms: 75
  error_type: None
