crates/kapsel-testing/src/snapshots/kapsel_testing__empty_system_state.snap
---
source: crates/kapsel-testing/src/lib.rs
expression: snapshot
---
Events Table Snapshot
====================

No events found.
